[Hot fix] Nav bar on mobile not see

--- a/quiz-ui/src/components/NavBar/NavBar.css
+++ b/quiz-ui/src/components/NavBar/NavBar.css
@@ -33,6 +33,7 @@
   padding: 0.5rem 0rem;
   background: #337ab7;
   color: black;
+  z-index: 2000;
   /* box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23); */
 }
 
